@@ -1,0 +1,4 @@
+#!/usr/bin/env python
+# -*- coding: utf-8 -*-
+LAST_UPDATE = "2012-09-03"
+DATABASE_FORMAT_VERSION = "1.1.0"
