@@ -23,7 +23,7 @@ lv_job3 = 1
 gold = 0
 x = 7.47
 y = 3.67
-dir = 4
+dir = 6
 
 [status]
 str = 8
@@ -43,7 +43,7 @@ magadd = 1
 head = 0
 face = 0
 chestacce = 0
-tops = 1
+tops = 5
 bottoms = 0
 backpack = 0
 right = 0
@@ -53,13 +53,15 @@ socks = 0
 pet = 0
 
 [sort]
-item = 3,4,1
+item = 3,4,1,5,2
 warehouse = 
 
 [item]
 1 = 60107702,1
+2 = 10133600,1
 3 = 10020114,1
 4 = 10055500,1
+5 = 60143203,1
 
 [warehouse]
 
