@@ -1,3 +1,10 @@
+2012-09-01
+	add lib.version
+	pass rijndael_obj instead of rijndael_key to general.encode/decode
+	add MAX_USER_ID, MAX_PC_ID, MAX_PET_ID, MAX_MONSTER_ID
+	fix monster.spawn/delete error
+	use general.make_id to generate user and pc id when create
+
 2012-08-26
 	use system encoding for all log
 	move general.Null to general.NullClass
